# minigui

./: CMakeLists.txt  README.md
examples/calculator/: calculator.hpp
include/: backend_config.hpp
include/minigui/: backend.hpp  backend_config.hpp  gui.hpp
src/: main.cpp
src/minigui/: backend.cpp  gui.cpp
